--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html {
 }
 
 .btn-grad:hover {
-  background-position: right center; /* change the direction of the change here */
+  background-position: right center;
   color: #fff;
   text-decoration: none;
 }
